@@ -1,5 +1,6 @@
 iowow (1.4.6) UNRELEASED; urgency=medium
 
+  * Added `iwsha256()` SHA-256 hash implementation (iwsha2.h)
   * Added single thread worker (iwstw.h)
   * Added `iwstree_clear()` (iwstree.h)
 
